--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "TW-Thailand – Attractions Guide 2025",
+    "name": "Thailand Attractions Guide 2025",
     "short_name": "Attractions",
     "start_url": "/GJN-2025-attractions/",
     "display": "standalone",
