--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "🏝️ Thailand – Attractions Guide 2025",
-  "short_name": "Attractionsg Guide",
+  "short_name": "Attractions",
   "start_url": "/GJN-2025-attractions/",
   "scope": "/GJN-2025-attractions/",
   "display": "standalone",
