--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "🏝️ Thailand – Attractions Guide 2025",
+  "name": "\ud83c\udfaf South Korea \u2013 Activities Guide 2025",
   "short_name": "Attractions",
-  "start_url": "/GJN-2025-attractions/",
-  "scope": "/GJN-2025-attractions/",
+  "start_url": "/GJN-2025-activities/",
+  "scope": "/GJN-2025-activities/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0b3d91",
   "icons": [
     {
-      "src": "/GJN-2025-attractions/assets/icons/icon-192x192.png",
+      "src": "/GJN-2025-activities/assets/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/GJN-2025-attractions/assets/icons/icon-512x512.png",
+      "src": "/GJN-2025-activities/assets/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
