--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "\ud83c\udfaf South Korea \u2013 Activities Guide 2025",
+  "name": "🎯 South Korea – Activities Guide 2025",
   "short_name": "Attractions",
   "start_url": "/GJN-2025-activities/",
   "scope": "/GJN-2025-activities/",
