--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,8 +1,7 @@
 {
-  "name": "🎯 South Korea – Activities Guide 2025",
-  "short_name": "Attractions",
+  "name": "🎎 South Korea Activities Guide 2025",
+  "short_name": "Activities",
   "start_url": "/GJN-2025-activities/",
-  "scope": "/GJN-2025-activities/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0b3d91",
@@ -18,5 +17,6 @@
       "type": "image/png",
       "purpose": "any maskable"
     }
-  ]
+  ],
+  "scope": "/GJN-2025-activities/"
 }
